# celery-grafana

./: .markdownlint-cli2.jsonc  README.md  docker-compose.yml  flake.nix  prometheus.yml  pyproject.toml
celery_workers/: worker.py
nginx/: Dockerfile  nginx.conf
